fix blurry background on small screen

--- a/CSS/comp.css
+++ b/CSS/comp.css
@@ -126,6 +126,11 @@ footer {
 }
 
 @media (max-width: 1000px) {
+
+      body {
+        background-size: 100% 100%;
+      }
+
       .Title {
         font-size: 60px;
         margin-top: 20px;
