--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -363,6 +363,10 @@ footer {
 /*small screen style*/
 @media (max-width: 767px) {
 
+  body{
+    background-size: 100% 100%;
+  }
+
   .Title {
     font-size: 70px;
   }
